// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`re-renders ball divs 1`] = `
<div>
  <section
    class="ball-section"
  >
    <div
      class="ball-div"
      data-id="1074207417582"
    >
      Rugby Ball
    </div>
    <div
      class="ball-div"
      data-id="930318065358"
    >
      Baseball
    </div>
    <div
      class="ball-div"
      data-id="1243649354047"
    >
      Beachball
    </div>
    <div
      class="ball-div"
      data-id="241277678684"
    >
      American Football
    </div>
  </section>
</div>
`;

exports[`re-renders ball divs 2`] = `
<div>
  <section
    class="ball-section"
  >
    <div
      class="ball-div"
      data-id="1498700061257"
    >
      Football
    </div>
    <div
      class="ball-div"
      data-id="1074207417582"
      style="border: 2px solid green;"
    >
      Rugby Ball
    </div>
    <div
      class="ball-div"
      data-id="710272042201"
    >
      Volleyball
    </div>
    <div
      class="ball-div"
      data-id="202884755319"
    >
      Billiard Ball
    </div>
  </section>
</div>
`;

exports[`renders ball section 1`] = `
<div>
  <section
    class="ball-section"
  >
    <div
      class="ball-div"
      data-id="930041752076"
    >
      Cricket Ball
    </div>
    <div
      class="ball-div"
      data-id="878299898234"
    >
      Squash Ball
    </div>
    <div
      class="ball-div"
      data-id="202884755319"
    >
      Billiard Ball
    </div>
    <div
      class="ball-div"
      data-id="122444100839"
    >
      Basketball
    </div>
  </section>
</div>
`;
